Finally getting list of links with profiles
I need to insert the list of links into a list, remove duplicates, and insert the list to MongoDB.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-
+user.json
 secret.txt
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/Linkedin_extractor.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
-.vscode/launch.json
